--- a/sampleProject/blog/templates/blog/create.html
+++ b/sampleProject/blog/templates/blog/create.html
@@ -1,7 +1,7 @@
 <form method="POST" action="{% url 'blog:blog_create' %}">
     {% csrf_token %}
-    <!-- <label for="fname">Title</label><br>
-    <input type="text" id="fname" name="title"><br><br> -->
+    <label for="fname">Title</label><br>
+    <input type="text" id="fname" name="title"><br><br>
     <label for="lname">Author</label><br>
     
     <select id="lname">
@@ -9,7 +9,7 @@
       <option>{{ user }}</option>
       {% endfor %}
     </select><br><br>
-    <!-- <label for="lbody">Body</label><br>
-    <input type="text" id="lbody" name="body"><br><br> -->
+    <label for="lbody">Body</label><br>
+    <input type="text" id="lbody" name="body"><br><br>
     <input type="submit" value="Submit">
   </form> 
