--- a/sampleProject/blog/templates/blog/create_django_form.html
+++ b/sampleProject/blog/templates/blog/create_django_form.html
@@ -1,7 +1,8 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-
-    {{ form.as_table }}
-
+    <table>
+      {{ form.as_table }}
+    </table>
+    
     <input type="submit" value="Submit">
   </form> 
